[package]
name = "ptyproc"
version = "0.1.0"
authors = ["Tyler Ruckinger <t.ruckinger@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "0.1.10"
static_assertions = "1.1.0"


[target.'cfg(unix)'.dependencies]
nix = "0.17.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.8", features = ["consoleapi", "fileapi", "handleapi", "impl-default", "namedpipeapi", "processthreadsapi", "synchapi", "winbase", "winerror", "winnt"] }

[dev-dependencies]
tempfile = "3"
